[tool.poetry]
name = "plexwrapped"
version = "0.1.0"
description = ""
authors = ["Zoe Farmer <zoe@dataleek.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pony = "^0.7.17"
black = "^23.12.0"
click = "^8.1.7"
numpy = "^1.26.2"
polars = "^0.20.2"
thefuzz = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
